services/webstore/yaml/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${WEBSTORE_SERVICE}-service
  namespace: ${K8S_NAMESPACE}
  labels:
    app: ${WEBSTORE_SERVICE}
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: '${CONTAINER_PROTOCOL}'
    alb.ingress.kubernetes.io/healthcheck-path: '/'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '2'
    alb.ingress.kubernetes.io/healthcheck-port: 'traffic-port'
    alb.ingress.kubernetes.io/healthcheck-protocol: '${CONTAINER_PROTOCOL}'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ports:
    - port: ${SERVICE_PORT}
      targetPort: ${WEBSTORE_PORT}
      protocol: TCP
  type: NodePort
  selector:
    app: ${WEBSTORE_SERVICE}
    deployment: ${K8S_LABEL_DEPLOYMENT}
